# toonstream

./: .gitignore  APPROVAL_GATE_SETUP.md  CI_CD_GUIDE.md  LICENSE  MANIFEST.in  PICKLE_USAGE.md  PRODUCTION_READINESS_2025-11-25.md  PUBLISHING.md  README.md  RELEASE_NOTES_v1.0.0.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
benchmarks/: README.md  compare_deep_nested.py  compare_flat_formats.py  compare_nested_formats.py  config.json  run_all_comparisons.py  test_optimization.py
data/: README.md  configs-deep-nested.json  employees-flat.json  github-repos.json  orders-nested.json
examples/: README.md  advanced_example.py  basic_example.py  pickle_example.py  toonlib_tutorial.ipynb  toonstream_tutorial.ipynb
output/: employees.pkl  employees.toon.pkl
results/: OPTIMIZATION_GUIDE.md  README.md
tests/: README.md  __init__.py  test_toonlib.py  test_toonstream.py
toonlib/: README.md  __init__.py  decoder.py  encoder.py  exceptions.py  pickle_utils.py
toonstream/: README.md  __init__.py  decoder.py  encoder.py  exceptions.py
